--- a/css/styles.css
+++ b/css/styles.css
@@ -237,6 +237,10 @@ ul {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  padding-left: 41px;
+  padding-right: 39px;
 }
 
 .button-close {
@@ -248,6 +252,9 @@ ul {
   border-radius: 50%;
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 8px;
+  right: 8px;
 }
 
 .backdrop.is-hidden {
@@ -287,8 +294,7 @@ textarea {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 41px;
-  padding-right: 39px;
+  margin-bottom: 0;
 }
 
 .form-field {
@@ -303,13 +309,14 @@ textarea {
   padding: 12px 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  height: 40px;
 }
 
 .form-field label {
   margin-bottom: 4px;
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.67;
+  line-height: 1.17;
   text-align: left;
 
   letter-spacing: 0.01em;
@@ -362,10 +369,12 @@ textarea {
 }
 
 .form-policy label {
+  display: flex;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   color: #757575;
+  align-items: center;
 }
 
 .input-policy {
@@ -397,6 +406,7 @@ textarea {
   background-origin: border-box;
   border-color: #2196f3;
 }
+
 .button.policy {
   width: 200px;
   height: 50px;
